# my-stonks-api

./: .gitignore  .pre-commit-config.yaml  alembic.ini  celerybeat-schedule  deploy.sh  docker-compose.yml  manage.py  pyproject.toml  start_web.sh  start_worker.sh
.github/: copilot-instructions.md
.github/instructions/: backend-python.instructions.md  backend-tests.instructions.md  frontend-react.instructions.md
.github/prompts/: new-endpoint.prompt.md
alembic/: env.py
alembic/versions/: 2ce91a1f52d2_add_lca_to_asset_type.py  461142f00b2d_currency_na_transacao_não_no_asset.py  80e1566e31b5_create_portfolio_user_configuration_.py  bf813f49cdb5_ajustando_autoincrement_da_tabela_.py  d49bf7734964_position_usd.py
app/: main.py  main_celery.py
app/api/: router.py
app/api/asset/: router.py  schemas.py
app/api/brokers/: router.py  schemas.py
app/api/market_data/: router.py  schemas.py
app/api/portfolio/: router.py
app/config/: logger.py  settings.py
app/domain/finance/: helpers.py  performance_metrics.py  returns.py  risk_metrics.py  trade.py
app/domain/income_tax/: tax_income_calculator.py
app/entrypoints/http/: fastapi_app.py  router.py
app/entrypoints/worker/: celery_app.py  scheduler.py  task_runner.py
app/infra/http/: __init__.py  async_http_client.py
app/infra/integrations/: bcb_client.py  brapi_client.py  crypto_compare_client.py  mais_retorno_client.py  market_data_provider.py  tesouro_client.py
app/infra/redis/: decorators.py  redis_service.py
app/infrastructure/db/: session.py
app/infrastructure/integrations/: alpha_vantage_client.py  anbima_client.py  brapi_client.py  crypto_compare_client.py  mais_retorno_client.py  market_data_provider.py  status_invest_client.py  tesouro_client.py
app/infrastructure/middlewares/: demo_user_middleware.py
app/modules/brokers/: __init__.py
app/modules/market_data/: __init__.py
app/modules/portfolio/: __init__.py
app/modules/users/: decorators.py  manager.py  views.py
app/services/: cache_service.py  market_data.py
app/services/asset/: asset.py
app/services/brokers/: brokers_service.py
app/services/portfolio/: portfolio_base_service.py  portfolio_category_service.py  portfolio_consolidator_service.py  portfolio_dividend_service.py  portfolio_income_tax_service.py  portfolio_position_service.py  portfolio_transaction_service.py  portfolio_user_configuration.py
app/users/: db.py  decorators.py  manager.py  models.py  schemas.py  views.py
app/users/scripts/: create_superuser.py
app/utils/: df.py  response.py  serialize.py  strings.py
app/worker/: celery_app.py  task_runner.py
app/worker/tasks/: __init__.py  consolidate_all_portfolios.py  consolidate_fiis_dividends.py  consolidate_indexes_history.py  consolidate_single_portfolio.py  recalculate_asset_position.py  set_indexes_history_cache.py  set_patrimony_evolution_cache.py  set_portfolio_returns_cache.py
backend/: build.sh  docker-compose.yml  manage.py  render.yaml  start_worker.sh
backend/app/: main_fastapi.py
backend/app/config/: logger.py
backend/app/utils/: response.py  timing.py
backend/tests/: test_asset_api.py  test_brokers_api.py  test_portfolio_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/actions/: auth.ts  portfolio.ts  sync.ts
frontend/src/api/: market.ts  portfolio.ts
frontend/src/components/: AssetAveragePriceChart.tsx  AssetDetailPanel.tsx  AssetDetailPanelSkeleton.tsx  AssetDetailsCard.tsx  (+14 more)
tests/: conftest.py  test_api.py  test_asset_api.py  test_market_data_api.py  test_portfolio.py
(+278 files in other folders)
