[tool.poetry]
name = "my-stonks-api"
version = "0.1.0"
description = "API de consolidação de carteira"
authors = ["Christian Kedor <christian.kedor@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.14"
aiosignal = "1.3.2"
alembic = "1.15.1"
alpha-vantage = "3.0.0"
amqp = "5.3.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
apscheduler = "3.11.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
bcrypt = "4.3.0"
beautifulsoup4 = "4.13.3"
billiard = "4.2.1"
celery = "5.4.0"
certifi = "2025.1.31"
cffi = "1.17.1"
cfgv = "3.4.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
contourpy = "1.3.1"
cryptography = "44.0.2"
cycler = "0.12.1"
distlib = "0.3.9"
dnspython = "2.7.0"
email-validator = "2.2.0"
et-xmlfile = "2.0.0"
exceptiongroup = "1.2.2"
fastapi = "0.115.12"
fastapi-users = "14.0.1"
fastapi-users-db-sqlalchemy = "7.0.0"
filelock = "3.18.0"
fonttools = "4.56.0"
frozenlist = "1.5.0"
greenlet = "3.1.1"
h11 = "0.14.0"
identify = "2.6.9"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
kiwisolver = "1.4.8"
kombu = "5.5.1"
logtail-python = "0.3.3"
makefun = "1.15.6"
mako = "1.3.9"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.10.1"
mdurl = "0.1.2"
msgpack = "1.1.0"
multidict = "6.2.0"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
nodeenv = "1.9.1"
numpy = "2.2.4"
openpyxl = "3.1.5"
packaging = "24.2"
pandas = "2.2.3"
passlib = "1.7.4"
pathspec = "0.12.1"
pillow = "11.1.0"
platformdirs = "4.3.7"
prompt-toolkit = "3.0.50"
propcache = "0.3.1"
psycopg2-binary = "2.9.10"
pwdlib = "0.2.1"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pyjwt = "2.10.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.20"
pytz = "2025.1"
pyyaml = "6.0.2"
redis = "5.2.1"
requests = "2.32.3"
rich = "13.9.4"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqladmin = "0.20.1"
sqlalchemy = "2.0.39"
starlette = "0.46.1"
tomli = "2.2.1"
typer = "0.15.2"
typing-extensions = "4.12.2"
tzdata = "2025.1"
tzlocal = "5.3.1"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
vine = "5.1.0"
virtualenv = "20.29.3"
wcwidth = "0.2.13"
wtforms = "3.1.2"
yarl = "1.18.3"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.dev.dependencies]
isort = "6.0.1"
ruff = "0.11.2"
pre-commit = "4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "B", "W", "PL", "PT"]
lint.ignore = ["E501", "B008", "PLR0911"]
lint.preview = true
format.preview = true
format.quote-style = 'single'
extend-exclude = ['alembic/', 'manage.py', 'app/worker/tasks/', 'app/worker/', 'app/users/', 'app/db/repository.py', 'app/main.py']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnigs'

[tool.taskipy.tasks]
run = 'fastapi dev app/main.py --port 7000'
pre_test = 'task lint'
test = 'pytest --cov=app -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
create_migration = 'alembic revision --autogenerate -m' 
migrate = 'alembic upgrade head'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
